# fastapi-sqlalcemy-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.claude/commands/: commit-push-pr.md  commit.md
.claude/skills/app-commit/: SKILL.md  fix-and-commit.sh
.claude/skills/app-pr-description/: SKILL.md
app/: exceptions.py  logger.py  main.py
app/routers/: __init__.py  deps.py  infra.py
app/services/: infra_service.py
app/settings/: db.py  env.py
app/storage/db/: base.py  connection_manager.py
app/storage/db/migrations/: alembic.ini  env.py
app/storage/db/repositories/: __init__.py  base_async_repository.py
tests/: conftest.py
tests/test_routers/: test_infra.py
vars/: app.env  db.env  test.app.env  test.db.env
